--- a/home.css
+++ b/home.css
@@ -92,7 +92,7 @@ a {
 
 #banner h1 {
   color: white;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 300;
 }
 
@@ -107,5 +107,8 @@ a {
     flex-direction: row;
     max-width: 1440px;
     margin: 0 auto;
+  }
+  #banner h1 {
+    font-size: 36px;
   }
 }
